# websecurity

./: README.md
injexpose/: .gitignore  .saved_cookie.txt  README.md  injexpose.py  pyproject.toml  sample_sqlmap_output.txt
injexpose/.zap_home/: add-ons-state.xml  config.xml
injexpose/.zap_home/db/: permanent.data  permanent.lck  permanent.properties  permanent.script
injexpose/.zap_home/session/: untitled1.lck  untitled1.properties
injexpose/injexpose/: cli.py  model.py  parse_sqlmap.py  report_terminal.py  triage.py
injexpose/injexpose.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
injexpose/outputs/: zap_report_20260203_140321.html  zap_report_20260203_140321.json  zap_report_20260203_140553.html  zap_report_20260203_140553.json  zap_report_20260203_140638.html  zap_report_20260203_140638.json
injexpose/reports/: sqlmap_output.txt
injexpose/reports/llm/: llm_report_20260204_112231.json  llm_report_20260204_112231.md  llm_report_20260301_054754.json  llm_report_20260301_054754.md
injexpose/reports/nikto/: nikto_report.txt
injexpose/reports/sqlmap/: sqlmap_output.txt
injexpose/reports/virustotal/: virustotal_report.json  virustotal_summary.txt
injexpose/reports/zap/: zap_report.html  zap_report.json  zap_report_20260301_054729.html  zap_report_20260301_054729.json  zap_report_20260308_105301.html  zap_report_20260308_105301.json  zap_report_20260308_105659.html  zap_report_20260308_105659.json  (+2 more)
injexpose/tools/: dvwa_auth.py  nikto_scan.py  ollama_report.py  openai_report.py  sqlmap_scan.py  virustotal_scan.py  zap_scan.py
(+1 files in other folders)
