[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "injexpose"
version = "0.1.0"
description = "InjeXpose triage reporter for sqlmap outputs"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
injexpose = "injexpose.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["injexpose*"]
